# GolayPair

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  NOTES.md  README.md  TODO.md  address.c  annotated.table  array.c  array.cpp  array.h  batch.sh  batch2.sh  batch3.sh  build.ps1  compress.sh  coprimes.h  decomps.h  driver.ps1  driver.sh  equivalence.cpp  equivalence.h  filter.sh  filterbatch.sh  fourier.c  fourier.cpp  fourier.h  generate_classes.cpp  golay.c  golay.cpp  golay.h  golayoptimized.c  golayrough.c  main  main.c  main.cpp  match.sh  match_pairs.cpp  nauty.py  (+17 more)
compressions/: Makefile  NOTES.md  a  b  compress.72.a.1.c  compress.72.b.1.c  compressions_a.cpp  compressions_b.cpp  driver.sh  driverA.ps1  driverB.ps1  find.sh  match_compressions.cpp  sedChanges1  treat.sh
fftw-3.3.10/: Makefile  config.status
fftw-3.3.10/api/: Makefile
fftw-3.3.10/dft/: Makefile
fftw-3.3.10/dft/scalar/: Makefile
fftw-3.3.10/dft/simd/: Makefile
fftw-3.3.10/doc/: Makefile
fftw-3.3.10/doc/FAQ/: Makefile
fftw-3.3.10/genfft/: Makefile
fftw-3.3.10/kernel/: Makefile
fftw-3.3.10/libbench2/: Makefile
fftw-3.3.10/m4/: Makefile
fftw-3.3.10/mpi/: Makefile
fftw-3.3.10/rdft/: Makefile
fftw-3.3.10/rdft/scalar/: Makefile
fftw-3.3.10/rdft/simd/: Makefile
fftw-3.3.10/reodft/: Makefile
fftw-3.3.10/simd-support/: Makefile
fftw-3.3.10/support/: Makefile
fftw-3.3.10/tests/: Makefile  bench
fftw-3.3.10/threads/: Makefile  libfftw3_omp.la  libfftw3_threads.la
fftw-3.3.10/threads/.deps/: libfftw3_omp_la-conf.Plo  libfftw3_omp_la-ct.Plo  libfftw3_omp_la-dft-vrank-geq1.Plo  libfftw3_omp_la-hc2hc.Plo  libfftw3_omp_la-openmp.Plo  libfftw3_omp_la-rdft-vrank-geq1.Plo  libfftw3_omp_la-vrank-geq1-rdft2.Plo  libfftw3_threads_la-api.Plo  (+4 more)
fftw-3.3.10/tools/: Makefile  fftw-wisdom
include/: coprimes.h  equivalence.h  filter.h  fourier.h  generate_hybrid.h  generate_orderly.h  golay.h  io.h  lyndon.h  match_pairs.h  orderly_equivalence.h  output.h  sort.h  uncompression.h
lib/: array.cpp  array.h  binary.cpp  binary.h  coprimes.cpp  coprimes.h  decomps.cpp  decomps.h  equivalence.cpp  equivalence.h  fourier.cpp  fourier.h  golay.cpp  golay.h  io.cpp  orderly_equivalence.cpp  orderly_equivalence.h
lib/fftw-3.3.10/: config.h  config.status
non-compressions/: Makefile  NOTES.md  driver.ps1  driver.sh  filter_equivalent  filter_equivalent.cpp  generate_classes  generate_classes.cpp  generate_classesA  generate_classesA.cpp  generate_classesAPARALLEL.cpp  generate_classesB  generate_classesB.cpp  generate_classesBPARALLEL.cpp  generate_classesMPI  generate_classesMPI.cpp  generate_classesPARALLEL.cpp  generate_orderly  generate_orderly.cpp  generatecoprimes.py  generatepartitions.py  match_inequivalent.cpp  match_pairs  match_pairs.cpp  print_timings_table.py  results.csv  results.table  rowsums.cpp  test.cpp
non-compressions/results/: 1-pairs-found  10-pairs-found  10-unique-filtered-0-0.sorted  10-unique-filtered-1-0  10-unique-filtered-1-0.sorted  10-unique-filtered-a-0  10-unique-filtered-b-0  13-unique-filtered-a-0  13-unique-filtered-b-0  16-b-psd  16-candidates-a  16-candidates-a.sorted  16-candidates-b  16-common  16-pairs-found  16-unique-filtered-0-0  16-unique-filtered-0-0-1  16-unique-filtered-0-0-1.sorted  16-unique-filtered-0-0-2  16-unique-filtered-0-0.sorted  16-unique-filtered-1-0  16-unique-filtered-1-0-1  16-unique-filtered-1-0-1.sorted  16-unique-filtered-1-0-2  16-unique-filtered-1-0.sorted  16-unique-filtered-a-0  16-unique-filtered-a-0.sorted  16-unique-filtered-b-0  16-unique-filtered-b-0.sorted  16-unique-pairs-found  18-unique-filtered-a-0  18-unique-filtered-a-0.sorted  18-unique-filtered-b-0  18-unique-filtered-b-0.sorted  2-unique-filtered-0-0.sorted  2-unique-filtered-a-0  2-unique-pairs-found  20-pairs-found  20-unique-filtered-0-0  20-unique-filtered-0-0.sorted  (+257 more)
results/: 10-pairs-found  10-unique-filtered-a-0  10-unique-filtered-b-0  13-unique-filtered-b-0  16-pairs-found  16-unique-filtered-a-0  16-unique-filtered-b-0  18-unique-filtered-a-0  18-unique-filtered-b-0  20-pairs-found  20-unique-filtered-a-0  20-unique-filtered-b-0  26-unique-filtered-a-0  26-unique-filtered-b-0  4-pairs-found  5-unique-filtered-a-0  8-pairs-found  8-unique-filtered-a-0  8-unique-filtered-b-0  9-unique-filtered-b-0  log-1.txt  log-10.txt  log-16.txt  log-18.txt  log-2.txt  log-20.txt  log-4.txt  log-5.txt  log-8.txt  log-9.txt  pairs-10.txt  pairs-16.txt  pairs-2.txt  pairs-20.txt  pairs-4.txt  pairs-8.txt
script/: batch_chain.py  driver.sh  gen_parallel.sh  load.sh  profile.sh  profile_callgrind.sh  python_install.sh  python_load.sh  uncompress.sh  uncompress_parallel.sh
src/: CMakeLists.txt  cache_filter.cpp  canon_filter.cpp  compress.cpp  filter.cpp  filter_equivalent.cpp  generate_classes.cpp  generate_hybrid.cpp  generate_orderly.cpp  golay.cpp  golay.h  lyndon.cpp  main.cpp  match_pairs.cpp  print_timings_table.py  results.csv  sort.cpp  uncompression.cpp  uncompression_kernel.cu
src/base/: 26  90-3.csv  script
src/core/: CMakeLists.txt  uncompression.h  uncompression_kernel.cu
src/core/filter/: CMakeLists.txt
src/core/generate/: CMakeLists.txt  generate_hybrid.cpp
src/core/match/: CMakeLists.txt  match_pairs.cpp  match_pairs.h
src/core/sort/: CMakeLists.txt
src/core/uncompression/: CMakeLists.txt  uncompression.cpp  uncompression.h
src/core/uncompression/gpu/: uncompress_gpu.cpp  uncompress_gpu.h  uncompress_kernel.cu  uncompress_kernel.h  uncompress_kernel_impl.h  uncompress_kernel_interface.cpp  uncompress_kernel_new.cu
src/core/uncompression/gpu/impl/: uncompress_kernel.cpp  uncompress_kernel.cu  uncompress_kernel.h  uncompress_kernel_impl.h
src/utils/: CMakeLists.txt  array.h  constants.h  decomps.h  equivalence.cpp  fourier.cpp  golay.cpp  io.cpp  io.h
src/utils/gpu/: CMakeLists.txt  cuda_error.h  flat_perm_list.cu  flat_perm_list.h  fourier_pool.cu  fourier_pool.h  gpu_fourier.cu  gpu_fourier.h  jit_headers.h.in  memorypool.h  mixed_radix_pool.cu  mixed_radix_pool.h  sequence_pool.cu  sequence_pool.h  view_types.h
(+57 files in other folders)
